log/build_2021-04-01_15-53-49/pickplace/stderr.log
  File "/home/gy/Omron_TM_ROS2/install/pickplace/lib/python3.8/site-packages/pickplace/pickplace_program.py", line 13
    from libraries.* import *
                   ^
SyntaxError: invalid syntax

